run tests by make

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,4 +186,4 @@ include_directories(
 # endif()
 
 ## Add folders to be run by python nosetests
-catkin_add_nosetests(tests)
+catkin_add_nosetests(src/tests)
