Use pip dependency for knowledge base

--- a/package.xml
+++ b/package.xml
@@ -37,6 +37,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>python-lindypy-pip</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
